# TheMixNeverDies.com

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  build.py  constants.py  docker-compose.yml  helpers.py  input  modd.conf  netlify.toml  notes.md  pyproject.toml  requirements.txt  template.html
.github/workflows/: digitalocean.yml  netlify.yml
config/: asgi.py  settings.py  wsgi.py
static/: style.css
templates/: 404.html  archive.html  base.html  embeds.html  home.html  input  newer.html  older.html  page.html  playlist.html
tmnd/: urls.py
tmnd/cms/: admin.py  apps.py  models.py  signals.py  spotify.py  urls.py  views.py
tmnd/cms/management/commands/: bootstrap_app.py  update_playlist.py
tmnd/cms/migrations/: 0001_initial.py
tmnd/cms/templates/: archive.html  embed.html  track_list.html
tmnd/core/: apps.py  logger.py
tmnd/core/static/css/: _fonts.scss  _main.scss  _variables.scss  style.css  style.scss
tmnd/core/static/scss/: _main.scss  _variables.scss  style.scss
tmnd/core/templates/: footer.html  header.html  layout.html
tmnd/main/: apps.py  urls.py  views.py
tmnd/main/templates/: home.html
