[tool.poetry]
name = "TheMixNeverDies.com"
version = "2021.10.12.00"
description = "Nik likes these choonz."
authors = ["Nik Kantar <nik@nkantar.com>"]

[tool.poetry.dependencies]
python = "^3.6"
spotipy = "^2.16.1"
jinja2 = "^2.11.2"
python-dotenv = "^0.15.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
