[tool.poetry]
name = "tmnd"
version = "2021.0.0.0"
description = "Web app for managing a shareable playlist of liked songs and publishing a blog-style website of them."
authors = ["Nik Kantar <nik@nkantar.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"
psycopg2-binary = "^2.9.2"
Django = "^3.2.9"
loguru = "^0.5.3"
python-dotenv = "^0.19.2"
django-allauth = "^0.46.0"
spotipy = "^2.19.0"
Keysort = "^0.1.3"
django-rq = "^2.5.1"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
libsass = "^0.21.0"
black = "^21.11b1"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
